apps/filesync/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: filesync
  namespace: filesync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filesync
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: filesync
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 0
      containers:
        - name: filesync
          image: >-
            docker.io/machines/filestash:latest
          ports:
            - containerPort: 8334
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data/state/
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: filesync
      dnsPolicy: ClusterFirst
